[package]
name = 'sauce'
version = '0.1.2'
authors = ['Dan Cardin <ddcardin@gmail.com>']
edition = '2018'
description = 'A tool for managing directory-specific state.'
documentation = 'https://github.com/DanCardin/sauce'
homepage = 'https://github.com/DanCardin/sauce'
repository = 'https://github.com/DanCardin/sauce'
readme = 'README.md'
keywords = [
    'source',
    'shell',
    'direnv',
]
categories = ['command-line-utilities']
license-file = 'LICENSE'

[dependencies]
anyhow = '1.0.35'
etcetera = '0.3.2'
snailquote = '0.3.0'
toml = '0.5.7'
toml_edit = '0.2.0'

[dependencies.clap]
version = '3.0.0-beta.2'
features = [
    'suggestions',
    'color',
]

[dependencies.indexmap]
version = '1.6.1'
features = ['serde-1']

[dependencies.serde]
version = '1.0'
features = ['derive']
