[package]
name = "sauce"
version = "0.7.1"
authors = ["Dan Cardin <ddcardin@gmail.com>"]
edition = "2021"
description = "A tool for managing directory-specific state."
documentation = "https://github.com/DanCardin/sauce"
homepage = "https://github.com/DanCardin/sauce"
repository = "https://github.com/DanCardin/sauce"
readme = "README.md"
keywords = [
    "source",
    "shell",
    "direnv",
]
categories = ["command-line-utilities"]
license = "Apache-2.0"

[features]
default = []

dev = []

[dependencies]
ansi_term = "0.12"
anyhow = "1.0.35"
atty = "0.2.14"
comfy-table = "5.0.0"
corpus = {version = "0.2.1", features = ["xdg", "home"]}
etcetera = "0.3.2"
glob = "0.3.0"
itertools = "0.10.0"
path-absolutize = "3.0.6"
snailquote = "0.3.1"
subprocess = "0.2.6"
toml_edit = "0.2.0"
once_cell = "1.8.0"

[dependencies.clap]
version = "3.1.18"
features = [
    "suggestions",
    "color",
    "derive",
]

[dependencies.indexmap]
version = "1.6.1"
features = ["serde-1"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dev-dependencies]
assert_cmd = "1.0.3"
indoc = "1.0"
predicates = "1.0.7"
pretty_assertions = "1.2.1"
